<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/countdown"
        android:icon="@mipmap/ic_countdown"
        android:title="@string/nav_menu_countdown" />

    <item
        android:id="@+id/fourquadrant"
        android:icon="@mipmap/ic_four_quadrant"
        android:title="@string/nav_menu_four_quadrant" />

    <item
        android:id="@+id/target"
        android:icon="@mipmap/ic_target"
        android:title="@string/nav_menu_target" />

    <item
        android:id="@+id/history"
        android:icon="@mipmap/ic_history"
        android:title="@string/nav_menu_history" />

    <item
        android:id="@+id/note"
        android:icon="@mipmap/ic_cry"
        android:title="@string/nav_menu_not_available" />
</menu>
