<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/todo_dialog_title_hint"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/todo_dialog_description_hint"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/etTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
        <Spinner
            android:id="@+id/spCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/etDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <CheckBox
            android:id="@+id/cbTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo_dialog_pin_checkbox"
            app:layout_constraintTop_toBottomOf="@+id/btnSave"
            app:layout_constraintStart_toStartOf="parent"/>


        <Button
            android:id="@+id/btnPickDueTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo_dialog_pick_due_time"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/etDescription"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnPickRemindTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo_dialog_pick_remind_time"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/btnPickDueTime"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todo_dialog_save_button"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnPickRemindTime"
            app:layout_constraintBottom_toTopOf="@+id/cbTop"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
